<?xml version="1.0"?>
<package format="2">
  <name>lux_sensors</name>
  <version>0.0.1</version>
  <description>A ROS Package wrapping linux drivers for the TSL2591 lux sensor</description>

  <maintainer email="dhaas6@vt.edu">David Haas</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
